# deployFlag

./: .deepsource.toml  .dockerignore  .editorconfig  .env.example  .gitignore  .isort.cfg  .python-version  Dockerfile  Makefile  README.md  cloudbuild_depl.yaml  cloudbuild_depl_dev.yaml  docker-compose.yml  pyproject.toml
deployflag/: __init__.py  celery.py  logger.py
deployflag/contrib/ocave/: constants.py  contracts.py  tasks.py
deployflag/contrib/utils/: amqp.py
deployflag/core/: constants.py  exceptions.py  metric_calculation.py  preprocessing.py  training.py  utils.py
deployflag/models/: __init__.py  base.py  metadata.py
tests/: test_database.py  test_metric_calculation.py  test_observability.py  test_preprocessing.py  test_training.py  test_utils.py
