[tool.poetry]
name = "deployflag"
version = "0.1.0"
description = "ML based issue relevance engine"
authors = ["Harshit Singhai <harshit@deepsource.io>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
xgboost = "^1.3.3"
scikit-learn = "^0.24.1"
peewee = "^3.14.1"
celery = "4.4.7"
redis = "^3.5.3"
python-environ = "^0.4.54"
psycopg2 = "^2.8.6"
pandas = "^1.2.3"
sentry-sdk = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
autopep8 = "^1.5.5"
pytest = "^6.2.2"
isort = "^5.7.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
